# dupe-krill

./: Cargo.toml  LICENSE  README.md
src/: bin.rs  dupe.rs  file.rs  hasher.rs  json.rs  lazyfile.rs  lib.rs  main.rs  metadata.rs  reflink.rs  scanner.rs  ui.rs
tests/: filetest.rs  scantest.rs
