[package]
authors = ["Kornel Lesiński <kornel@geekhood.net>"]
description = "A fast file deduplicator. Replaces duplicate files with identical content with hardlinks."
documentation = "https://github.com/kornelski/dupe-krill#readme"
homepage = "https://github.com/kornelski/dupe-krill"
keywords = ["dupe", "deduplication", "dedupe", "disk-space"]
categories = ["filesystem", "command-line-utilities"]
license = "MIT"
name = "dupe-krill"
readme = "README.md"
repository = "https://github.com/kornelski/dupe-krill"
version = "1.4.6"
edition = "2018"

[[bin]]
name = "dupe-krill"
path = "src/bin.rs"

[profile.release]
lto = true
opt-level = 3
panic = "abort"

[dependencies]
getopts = "0.2.21"
ctrlc = "3.1.9"
blake3 = "0.3.8"
smallvec = "1.6.1"

[dependencies.serde]
optional = true
version = "1.0.126"

[dependencies.serde_derive]
optional = true
version = "1.0.126"

[dependencies.serde_json]
optional = true
version = "1.0.64"

[dev-dependencies]
tempdir = "0.3.7"

[features]
default = ["json"]
json = ["serde", "serde_derive", "serde_json"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
