[package]
authors = ["Kornel Lesiński <kornel@geekhood.net>"]
description = "A fast file deduplicator. Replaces duplicate files with identical content with hardlinks."
documentation = "https://github.com/kornelski/dupe-krill#readme"
homepage = "https://github.com/kornelski/dupe-krill"
keywords = ["dupe", "deduplication", "dedupe", "disk-space"]
categories = ["filesystem", "command-line-utilities"]
license = "MIT"
name = "dupe-krill"
readme = "README.md"
repository = "https://github.com/kornelski/dupe-krill"
version = "1.4.8"
edition = "2021"

[[bin]]
name = "dupe-krill"
path = "src/bin.rs"

[profile.release]
lto = true
opt-level = 3
panic = "abort"

[dependencies]
getopts = "0.2.21"
ctrlc = "3.2.1"
blake3 = "1.3.0"
smallvec = "1.8.0"

[dependencies.serde]
optional = true
version = "1.0.135"

[dependencies.serde_derive]
optional = true
version = "1.0.135"

[dependencies.serde_json]
optional = true
version = "1.0.78"

[dev-dependencies]
tempdir = "0.3.7"

[features]
default = ["json"]
json = ["serde", "serde_derive", "serde_json"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
